<resources>
    <string name="app_name">Reviva</string>
    <string name="inicio">O tempo guarda.\nVocê escolhe quando lembrar!</string>
    <string name="cadastrar">Começar</string>
    <string name="entrar">Entrar</string>
    <string name="login">Login</string>
    <string name="email">Digite seu email</string>
    <string name="senha">Digite sua senha</string>
    <string name="esqueci_senha">Esqueci minha senha</string>
    <string name="ou">ou</string>
    <string name="cadastro">Ainda não possui uma conta? Cadastre-se</string>
    <string name="cadastre">Cadastre-se</string>
    <string name="nome">Digite seu nome completo</string>
    <string name="conta">Digite seu email</string>
    <string name="criar">Criar Senha</string>
    <string name="confirmar">Confirmar senha</string>
    <string name="criada">Cadastar</string>
    <string name="outros">ou</string>
    <string name="possui">Já possui uma conta? Login</string>
    <string name="memoria">Memória criada com sucesso!</string>
    <string name="voltar">Voltar ao menu</string>
    <string name="configuracao">Configurações</string>
    <string name="dados">Alterar dados</string>
    <string name="notificacao">Notificações</string>
    <string name="sair">Sair da conta</string>
    <string name="editar">Editar perfil</string>
    <string name="nomes">Nome:</string>
    <string name="emails">Email:</string>
    <string name="data">Data de cadastro:</string>
    <string name="saida">Sair da conta</string>
    <string name="criacao">Criar Memória</string>
    <string name="relacionamentos">Relacionamentos</string>
    <string name="familia">Família</string>
    <string name="amigos">Amigos</string>
    <string name="viagens">Viagens</string>
    <string name="metas">Metas</string>
    <string name="novo">Criar tópico</string>
    <string name="texto">Texto</string>
    <string name="camera">Câmera</string>
    <string name="video">Vídeo</string>
    <string name="audio">Áudio</string>
    <string name="titulo">Título da memória</string>
    <string name="descricao">Descrição</string>
    <string name="visualizar">Visualizar em: Ex: 01/01/2026</string>
    <string name="cancelamento">Cancelar</string>
    <string name="salvamento">Salvar</string>
    <string name="futuro">Memória do Futuro</string>
    <string name="email_icon_description">Ícone de e-mail</string>
    <string name="password_icon_description">Ícone de senha</string>
    <string name="google_login_description">Botão para login com Google</string>
</resources>