<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7F6FF"
    tools:context=".activity_criar_memoria">

    <ImageButton
        android:id="@+id/btnVoltar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/elliipse_white"
        android:src="@drawable/ic_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/criacao"
        android:textColor="#000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnVoltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnVoltar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardCategorias"
        android:layout_width="0dp"
        android:layout_height="186dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/btnRelacionamentos"
                android:layout_width="65dp"
                android:layout_height="62dp"
                android:background="@drawable/bg_button_rounded"
                android:contentDescription="@string/relacionamentos"
                android:src="@drawable/ic_coracao"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtRelacionamentos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relacionamentos"
                android:textColor="#616161"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@+id/btnRelacionamentos"
                app:layout_constraintStart_toStartOf="@+id/btnRelacionamentos"
                app:layout_constraintTop_toBottomOf="@+id/btnRelacionamentos" />

            <ImageButton
                android:id="@+id/btnFamilia"
                android:layout_width="65dp"
                android:layout_height="63dp"
                android:background="@drawable/bg_button_rounded"
                android:contentDescription="@string/familia"
                android:src="@drawable/ic_familia"
                app:layout_constraintEnd_toStartOf="@+id/btnAmigos"
                app:layout_constraintStart_toEndOf="@+id/btnRelacionamentos"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtFamilia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/familia"
                android:textColor="#616161"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@+id/btnFamilia"
                app:layout_constraintStart_toStartOf="@+id/btnFamilia"
                app:layout_constraintTop_toBottomOf="@+id/btnFamilia" />

            <ImageButton
                android:id="@+id/btnAmigos"
                android:layout_width="65dp"
                android:layout_height="63dp"
                android:background="@drawable/bg_button_rounded"
                android:contentDescription="@string/amigos"
                android:src="@drawable/ic_amigos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnFamilia"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtAmigos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amigos"
                android:textColor="#616161"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@+id/btnAmigos"
                app:layout_constraintStart_toStartOf="@+id/btnAmigos"
                app:layout_constraintTop_toBottomOf="@+id/btnAmigos" />

            <ImageButton
                android:id="@+id/btnViagens"
                android:layout_width="65dp"
                android:layout_height="62dp"
                android:background="@drawable/bg_button_rounded"
                android:contentDescription="@string/viagens"
                android:src="@drawable/ic_aviao"
                app:layout_constraintBottom_toBottomOf="@+id/btnMetas"
                app:layout_constraintStart_toStartOf="@+id/btnRelacionamentos"
                app:layout_constraintTop_toTopOf="@+id/btnMetas" />

            <TextView
                android:id="@+id/txtViagens"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viagens"
                android:textColor="#616161"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@+id/btnViagens"
                app:layout_constraintStart_toStartOf="@+id/btnViagens"
                app:layout_constraintTop_toBottomOf="@+id/btnViagens" />

            <ImageButton
                android:id="@+id/btnMetas"
                android:layout_width="65dp"
                android:layout_height="63dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_button_rounded"
                android:contentDescription="@string/metas"
                android:src="@drawable/ic_metas"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnMais"
                app:layout_constraintStart_toEndOf="@+id/btnViagens"
                app:layout_constraintTop_toBottomOf="@+id/txtFamilia" />

            <TextView
                android:id="@+id/txtMetas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metas"
                android:textColor="#616161"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@+id/btnMetas"
                app:layout_constraintStart_toStartOf="@+id/btnMetas"
                app:layout_constraintTop_toBottomOf="@+id/btnMetas" />

            <ImageButton
                android:id="@+id/btnMais"
                android:layout_width="65dp"
                android:layout_height="63dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_button_rounded"
                android:contentDescription="@string/novo"
                android:src="@drawable/ic_mais"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnMetas"
                app:layout_constraintTop_toBottomOf="@+id/txtAmigos" />

            <TextView
                android:id="@+id/txtNovo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/novo"
                android:textColor="#616161"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@+id/btnMais"
                app:layout_constraintStart_toStartOf="@+id/btnMais"
                app:layout_constraintTop_toBottomOf="@+id/btnMais" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardBotoesMidia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardCategorias">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="12dp"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btnTexto"
                    android:layout_width="55dp"
                    android:layout_height="45dp"
                    android:layout_marginHorizontal="8dp"
                    android:background="@drawable/bg_button_rounded"
                    android:onClick="abrirCamera"
                    android:contentDescription="@string/texto"
                    android:src="@drawable/ic_text" />

                <TextView
                    android:id="@+id/txtTexto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto"
                    android:textColor="#616161"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btnFoto"
                    android:layout_width="55dp"
                    android:layout_height="45dp"
                    android:layout_marginHorizontal="8dp"
                    android:background="@drawable/bg_button_rounded"
                    android:contentDescription="@string/camera"
                    android:src="@drawable/ic_foto" />

                <TextView
                    android:id="@+id/txtCamera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camera"
                    android:textColor="#616161"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btnVideo"
                    android:layout_width="55dp"
                    android:layout_height="45dp"
                    android:layout_marginHorizontal="8dp"
                    android:background="@drawable/bg_button_rounded"
                    android:contentDescription="@string/video"
                    android:src="@drawable/ic_video" />

                <TextView
                    android:id="@+id/txtVideo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video"
                    android:textColor="#616161"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btnAudio"
                    android:layout_width="55dp"
                    android:layout_height="45dp"
                    android:layout_marginHorizontal="8dp"
                    android:background="@drawable/bg_button_rounded"
                    android:onClick="gravarAudio"
                    android:contentDescription="@string/audio"
                    android:src="@drawable/ic_mic" />

                <TextView
                    android:id="@+id/txtAudio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/audio"
                    android:textColor="#616161"
                    android:textSize="10sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/edtTituloMemoria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/titulo"
        android:inputType="textCapSentences"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColor="#000"
        android:textColorHint="#999"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardBotoesMidia" />

    <EditText
        android:id="@+id/edtDescricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edittext"
        android:gravity="top|start"
        android:hint="@string/descricao"
        android:inputType="textCapSentences|textMultiLine"
        android:minHeight="96dp"
        android:padding="12dp"
        android:textColor="#000"
        android:textColorHint="#616161"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTituloMemoria" />

    <EditText
        android:id="@+id/edtVisualizarEm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edittext"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/visualizar"
        android:minHeight="48dp"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:singleLine="true"
        android:textColor="#000"
        android:textColorHint="#616161"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDescricao" />

    <Button
        android:id="@+id/btnCancelar"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/cancelamento"
        android:textColor="#000"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSalvar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#50B2DD"
        android:text="@string/salvamento"
        android:textColor="#FFFF"
        android:textSize="12sp"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCancelar" />

</androidx.constraintlayout.widget.ConstraintLayout>